# avebot2

./: .gitignore  README.md  pyproject.toml
src/avebot2/: __main__.py
